kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: deeeye2/devops-bot-backend:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: db-volume
          mountPath: /usr/src/app/new_problems_solutions.db
          subPath: new_problems_solutions.db
        - name: uploads-volume
          mountPath: /usr/src/app/uploads
      volumes:
      - name: db-volume
        hostPath:
          path: /opt/docker/new_problems_solutions.db
      - name: uploads-volume
        hostPath:
          path: /opt/docker/uploads
